# pear-d

./: .coverage  .gitignore  README.md  package-lock.json  pyproject.toml  requirements.txt  setup.cfg
.github/workflows/: codeql.yml  tests.yml
pear_d_backend/: conftest.py  db.sqlite3  manage.py  pytest.ini
pear_d_backend/api/: admin.py  models.py  serializers.py  urls.py  views.py
pear_d_backend/api/migrations/: 0001_initial.py  0002_alter_favorites_restaurant_id.py  0002_remove_userprofile_id_alter_userprofile_email.py  0002_restaurant.py  0002_user_profile.py  0003_alter_restaurant_address.py  0003_rename_restaurant_id_favorites_restaurant.py  0003_rename_user_profile_userprofile.py  0003_useraccount_dark_mode_useraccount_favorites_and_more.py  0004_alter_restaurant_name.py  0005_delete_restaurant.py  (+8 more)
pear_d_backend/pear_d_backend/: asgi.py  credentials.env  settings.py  urls.py  wsgi.py
pear_d_backend/tests/: factories.py  test_authmodels.py
pear_d_frontend/: README.md  package-lock.json  package.json
pear_d_frontend/public/: index.html
pear_d_frontend/react_build/: asset-manifest.json  index.html
pear_d_frontend/src/: App.css  App.jsx  index.css  index.js  store.js
src/four_func_calculator/: four_function.py
src/four_function.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/peard/: connect_db.py  peard.py
standalone/: apikey.txt  restaurant_pull.py  restaurants.json  restaurants_to_db.py
tests/: test_four_function.py
tests/test_four_func_calculator/: test_four_function.py
useful_documentation/: Restaurant_Endpoints.md
(+26 files in other folders)
