[metadata]
name = four_function
description = four function calculator
author = Huy Ta
license = DEEZ_NUTZ
license_file = LICENSE
platforms = unix, linux

[options]
packages =
    four_func_calculator
install_requires = 
    requests>=2
python_requires = >=3.6
package_dir =
    =src
zip_safe = no

[options.extras_require]
testing =
    pytest>=6.0
    pytest-cov>=2.0


[flake8]
max-line-length = 160
exclude = 
    .git,
    __pycache__,
    venv
